--- a/index.html
+++ b/index.html
@@ -1,8 +1,81 @@
----
-layout : default
-title : Alex Wang
----
-<div class="blurb">
-	<h1>Hi there, I'm Alex Wang !</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>particle</title>
+    <style>
+        html,
+        body {
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            background: #f7fafc;
+            overflow: hidden;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+
+        @font-face {
+            font-family: RuiXian;
+            src: url(./font/RuiXian.ttf);
+            font-weight: normal;
+        }
+
+        @font-face {
+            font-family: HeiJian;
+            src: url(./font/HeiJian.ttf);
+            font-weight: normal;
+        }
+
+
+        .intro {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 240px;
+            height: auto;
+            transform: translate(-50%, -50%);
+            background: rgba(255,255,255,0);
+            font-family:RuiXian,HeiJian, Microsoft YaHei;
+        }
+
+        .intro h2{
+            text-align: center;
+        }
+
+        .intro .btn {
+            display: block;
+            width: 50%;
+            margin: auto;
+            font-size: 1em;
+            padding: 10px;
+            text-align: center;
+            text-decoration: none;
+            color: #fff;
+            background: #aaa;
+            /*background:darkgray;*/
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="intro">
+        <!--<h1>欢迎光临王鸿儒的个人网站</h1>-->
+        <h2>Alex Wang's Site</h2>
+        <a href="" class="btn">简历</a>
+        <a href="" class="btn">demo</a>
+        <a href="https://my.oschina.net/ALEEEx" class="btn" target="_blank">博客</a>
+    </div>
+    <canvas id="canvas"></canvas>
+
+    <script src="main.js"></script>
+</body>
+
+</html>
