--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
             position: absolute;
             left: 50%;
             top: 50%;
-            width: 240px;
             height: auto;
             transform: translate(-50%, -50%);
-            background: rgba(255,255,255,0);
             font-family:RuiXian,HeiJian, Microsoft YaHei;
         }
 
         .intro h2{
             text-align: center;
+            font-size: 3em;
         }
 
         .intro .btn {
@@ -54,20 +53,20 @@
             width: 50%;
             margin: auto;
             font-size: 1em;
-            padding: 10px;
+            padding: 10px 10px;
             text-align: center;
             text-decoration: none;
             color: #fff;
-            background: #aaa;
-            /*background:darkgray;*/
-            margin-bottom: 10px;
+            background: #0e90d2;
+            font-size: 2em;
+            margin-bottom: 1em;
+            border-radius: 2em;
         }
     </style>
 </head>
 
 <body>
     <div class="intro">
-        <!--<h1>欢迎光临王鸿儒的个人网站</h1>-->
         <h2>Alex Wang's Site</h2>
         <a href="" class="btn">简历</a>
         <a href="" class="btn">demo</a>
