--- a/index.html
+++ b/index.html
@@ -6,63 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>王鸿儒的个人小站</title>
-    <style>
-        html,
-        body {
-            margin: 0;
-            width: 100%;
-            height: 100%;
-            background: #f7fafc;
-            overflow: hidden;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%;
-        }
-
-        @font-face {
-            font-family: RuiXian;
-            src: url(./font/RuiXian.ttf);
-            font-weight: normal;
-        }
-
-        @font-face {
-            font-family: HeiJian;
-            src: url(./font/HeiJian.ttf);
-            font-weight: normal;
-        }
-
-
-        .intro {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            height: auto;
-            transform: translate(-50%, -50%);
-            font-family:RuiXian,HeiJian, Microsoft YaHei;
-        }
-
-        .intro h2{
-            text-align: center;
-            font-size: 3em;
-        }
-
-        .intro .btn {
-            display: block;
-            width: 50%;
-            margin: auto;
-            font-size: 1em;
-            padding: 10px 10px;
-            text-align: center;
-            text-decoration: none;
-            color: #fff;
-            background: #0e90d2;
-            font-size: 2em;
-            margin-bottom: 1em;
-            border-radius: 2em;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
